<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResumeActivity"
    android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="WebViewLayout">

            <!-- Logo at the top -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="224dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/sdrs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:textColor="#333333"
                android:textColorHint="#666666"
                android:autofillHints="name"
                android:hint="@string/f_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="#333333"
                android:textColorHint="#666666"
                android:autofillHints="email"
                android:hint="@string/email_for_resume"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="#333333"
                android:textColorHint="#666666"
                android:autofillHints="phoneNumber"
                android:hint="@string/phone_number"
                android:inputType="text|phone" />

            <EditText
                android:id="@+id/inputSkills"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="#333333"
                android:textColorHint="#666666"
                android:autofillHints="Skills"
                android:hint="@string/skills_comma_separated"
                android:inputType="textShortMessage" />

            <EditText
                android:id="@+id/inputExperience"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="#333333"
                android:textColorHint="#666666"
                android:autofillHints="experience"
                android:hint="@string/experience"
                android:inputType="text|textLongMessage" />

            <EditText
                android:id="@+id/inputSummary"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:autofillHints="summary"
                android:lines="3"
                android:hint="@string/professional_summary"
                android:inputType="textMultiLine"
                android:textColor="#333333"
                android:textColorHint="#666666" />

            <EditText
                android:id="@+id/inputEducation"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="education"
                android:lines="2"
                android:hint="@string/education_e_g_bscs_2020_2024"
                android:inputType="text"
                android:textColor="#333333"
                android:textColorHint="#666666" />

            <EditText
                android:id="@+id/inputProjects"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="project"
                android:lines="3"
                android:hint="@string/projects_e_g_skill_dev_system_app"
                android:inputType="textMultiLine"
                android:textColor="#333333"
                android:textColorHint="#666666" />

            <Spinner
                android:id="@+id/templateSpinner"
                android:layout_width="match_parent"
                android:textColor="#333333"
                android:textColorHint="#666666"
                android:layout_height="48dp"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/generateBtn"
                android:layout_width="142dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:text="@string/generate_resume"
                android:backgroundTint="#1565C0"
                android:textColor="#FFFFFF"
                android:layout_marginTop="12dp" />

            <WebView
                android:id="@+id/resumeWebView"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginTop="12dp" />
        </LinearLayout>
    </ScrollView>

